--- a/WebContent/assets/style.css
+++ b/WebContent/assets/style.css
@@ -513,8 +513,8 @@ body, html {
   }
   
   .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("pay.jpg");
-    height: 80%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/card.jpg");
+    height: 60%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -634,5 +634,35 @@ body, html {
   font-size: 100%; 
   font-family: "Poppins", sans-serif;
   }
+  
+  
+  .redline{
+    background-color: #923d60; 
+    color: white; 
+    padding: 16px; 
+    font-size: 18px; 
+    font-weight: bold; 
+    width:700px ; 
+    height: 15px; 
+    margin-bottom:50px;
+
+  }
+  
+.login-bg {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url('login-bg.jpg'); /* Replace with your image path */
+    background-size: cover;                 /* Scale image to cover entire page */
+    background-position: center;            /* Center the image */
+    background-repeat: no-repeat;           /* Prevent the image from repeating */
+}
+
+.login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;  
+  
 
 
